[package]
name = "downloader_config"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }


[features]
default = ["file"]
file = ["dep:serde_json"]
