[package]
name = "twba-downloader-config"
version = "0.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }


log = { version = "0.4", optional=true }
tracing = { version = "0.1", optional = true }


[features]
default = ["file", "log"]
file = ["dep:serde_json"]
log = ["dep:log"]
tracing = ["dep:tracing"]
